# MINERvANeutronMultiplicity

./: .gitignore  CMakeLists.txt  README.md  setup.sh.in  setupOnGPVMs.sh
scripts/: CMakeLists.txt  README.md  WarpingChi2Table.ods  backgroundBreakdown.cpp  candOrigins.yaml  compareErrorBands.yaml  dataMCRatio.cpp  edepsWithRatioFromLEPaper.cpp  getFiles.sh  migration.yaml  minerva.rootlogon.C  plotEfficiencyAndProcesses.cpp  plotSideband.cpp  plotUncertaintySummary.cpp  runTransWarp.sh  runWarping.make  runWarping.sh.in  selectionEfficiency.yaml  setup.sh  smearingFractionStudy.cpp  warpingTable.cpp
